<resources>
    <string name="app_name">BookStore</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_email_or_phone">Email or Phone no.</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_password_mismatch">Password mistmatch!</string>
    <string name="invalid_phone_numer">Invalid Phone Number !</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions." </string>
    <string name="action_login">Login</string>
    <string name="search_title">Search</string>
    <string name="search_result">Search result</string>
    <string name="search_hint">Search for books...</string>
    <string name="menu_search">Menu search</string>
    <string name="enter_text">Enter book/Author name</string>
    <string name="title_activity_signup">Activity Signup</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="sign_up">Sign up</string>
    <string name="prompt_name">Name</string>
    <string name="phone_number">Phone No. (optional)</string>
    <string name="address">Address (Optional)</string>
    <string name="home">Home</string>
    <string name="AddMoreBooks">Add Books</string>

    <!-- Strings related to Registering New book for Selling-->
    <string name="BookName">Book Name</string>
    <string name="BookVer">Version (Optional)</string>
    <string name="BookAuthor">Author (Optional)</string>
    <string name="BookPrice">Price(In Dollars)</string>
    <string name="BookCondition">Condition</string>
    <string name="AddMoreBook">Add More Book</string>
    <string name="BookSubmit">Submit</string>
    <string name="OtherRemarks">Other Remarks/Note</string>
    <string name="BookAddress">Pick up address(Optional)</string>
    BookAddress
</resources>
